--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-elastic-carousel": "^0.11.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.0.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
