--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "@testing-library/user-event": "^12.7.3",
     "axios": "^0.21.1",
     "material-ui-search-bar": "^1.0.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-elastic-carousel": "^0.11.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
-    "react-simple-image-slider": "^2.0.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
